# sdl3Engine

./: .gitignore  CMakeLists.txt  README.md
include/core/: camera.hpp  command_context.hpp  commands.hpp  console.hpp  engine.hpp  frame_context.hpp  game.hpp  handles.hpp  input.hpp  render_context.hpp  renderer.hpp  time.hpp  types.hpp  update_context.hpp  window.hpp
include/core/context/: render.hpp  resource.hpp  world.hpp
include/managers/: font.hpp  texture.hpp
include/states/: gameState.hpp  playState.hpp
include/ui/: cmds.hpp  colors.hpp  dirty.hpp  eventsink.hpp  hud.hpp  layout.hpp  ui.hpp
include/ui/content/: content.hpp  image.hpp  text.hpp
include/ui/elements/: button.hpp  container.hpp  element.hpp  label.hpp
include/ui/menu/: id.hpp  mainMenu.hpp  mainScreen.hpp  menu.hpp  playMenu.hpp  playScreen.hpp
include/ui/style/: solid.hpp  style.hpp  textured.hpp
src/: main.cpp
src/core/: camera.cpp  commands.cpp  console.cpp  engine.cpp  game.cpp  input.cpp  renderer.cpp  time.cpp  window.cpp
src/managers/: font.cpp  texture.cpp
src/states/: playState.cpp
src/ui/: layout.cpp  ui.cpp
src/ui/content/: image.cpp  text.cpp
src/ui/elements/: button.cpp  container.cpp  element.cpp  label.cpp
src/ui/menu/: mainMenu.cpp  mainScreen.cpp  menu.cpp  playMenu.cpp  playScreen.cpp
src/ui/style/: solid.cpp  textured.cpp
